more text, figure changes

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -30,7 +30,8 @@
 
 \section{Introduction}
 The disk around Orion Source I (\sourcei) has been the subject of intense
-study, as it is the closest disk around a `high-mass' ($M>8$ \msun) star
+study, as it is the closest \citep[$d\approx400$ pc;][]{Grossscheld2018a} disk
+around a `high-mass' ($M>8$ \msun) star
 \citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}.  It is also in many ways
 a unique source, being the only known protostellar object with SiO and \water
 masers in an outflow
