--- a/science.tex
+++ b/science.tex
@@ -131,7 +131,7 @@ Melvyn Wright\\
  while still embedded in their natal molecular cloud, and thus most molecular
  emission lines do not uniquely trace the disks in these regions. Here, we show
  that two molecular species, NaCl and KCl, appear to uniquely trace the outer
- edges of the disk around Orion \srci, the disk around the closest high-mass
+ edges of the disk around Orion \sourcei, the disk around the closest high-mass
  (15~\msun) protostellar system, and are not seen in the disks's natal cloud.
  We have detected more than 50 transitions of these molecules and their
  less common isotopologues toward \sourcei.
@@ -208,9 +208,11 @@ small handful of other AGB and post-AGB stars
 no detections outside of these environments have previously been reported.
 
 We have detected NaCl, KCl, and their $^{37}$Cl and $^{41}$K isotopologues in
-the disk around Orion Source I.  This disk, and the emission lines that were
-found to uniquely trace the disk apart from the hot core, were previously used
-to measure the central mass of Source I as 15 \msun, although those
+the disk around Orion Source I, the closest high-mass protostar at a distance
+$d\approx400$ pc \cite{Grossschedl2018a}.  These emission lines that uniquely
+trace the
+disk were previously used to measure the central mass of Source I as 15 \msun,
+although those
 measurements were performed before the spectral lines were identified as
 belonging to NaCl and KCl
  \cite{Ginsburg2018b}.  Source I is the brightest object in the
@@ -245,6 +247,8 @@ their measured centroid velocities and averaged them together (essentially
 removing  the Keplerian rotation to produce the equivalent spectrum averaged
 over a non-rotating object), obtaining a disk-averaged spectrum.  We use this
 spectrum to measure and  identify the emission lines (see Methods).
+The peak intensity maps of two bright NaCl lines, showing the morphology of the
+lines and the continuum are shown in Figure 1.
 
 % \bam{I added a parenthetical there trying to clarify for the reader what %
 % shifting the centroid velocities meant.  It's a very technical phrase.  My %
@@ -279,7 +283,7 @@ While the most prominent spectral features were the SiO and \water lines that
 have previously been observed \cite{Goddi2013a,Hirota2014a}, there were dozens
 of lines that remained unidentified in our initial study \cite{Ginsburg2018b}.
 We have now identified these lines as transitions of NaCl and KCl, noting the
-excellent correspondence between the observed and measured/catalogued
+excellent correspondence (see Figure 2) between the observed and measured/catalogued
 frequencies \cite{Caris2002a,Caris2004a,Muller2005a,Lovas2005b,Pickett1998a}.
 We additionally searched databases of transitions of these same species with
 more quanta of vibrational excitation, and found additional matches
