--- a/science.tex
+++ b/science.tex
@@ -308,15 +308,17 @@ that, unlike SiO and \water, the salts do not trace the outflow.
 Once in the gas phase, however, we expect salts to rapidly deplete back into
 dust grains \cite{Cherchneff2012a}.  Since we observe them in emission, with
 narrow velocity line profiles, they must be released into the gas phase either
-by grain destruction or sputtering, or produced by chemical production from
-simple gas-phase precursors, likely elemental atomic gas (either neutral or
-ionized Na and K).  Because previous studies have failed to detect any atomic
-recombination lines (from atomic ions recombining with electrons) in this
-source \cite{Plambeck2016a,Baez-Rubio2018a}, we suggest the gas-phase route is
+by grain destruction or sputtering, or produced by chemical reactions from
+simple gas-phase precursors, i.e., either neutral or
+ionized elemental Na and K with Cl or HCl.  Because previous studies have
+failed to detect any atomic recombination lines from atomic ions recombining
+with electrons in this
+source \cite{Plambeck2016a,Baez-Rubio2018a}, the gas-phase route is
 less likely. We therefore suggest that the salts are produced by dust
 destruction, either via sputtering by high-energy particles \cite{Schilke1997a}
-or by thermal desorption of the outer dust layers \cite{Decin2016a}.  The SiO
-emission seen in the outflow confirms that dust destruction is occurring as
+or by thermal desorption of the outer layers of dust particles
+\cite{Decin2016a}.  The SiO emission seen in the outflow confirms that dust
+destruction is occurring as
 part of the outflow launch process.
 
 %Since we see SiO tracing
@@ -329,17 +331,19 @@ part of the outflow launch process.
 %reader to decide if that is what 'must' be happening.
 
 The detection of highly vibrationally excited transitions of these species,
-with upper-state energy levels of as much as $\sim$3000~K, is suggestive of
+with upper-state energy levels as high as $\sim$3000~K, is suggestive of
 extreme physical or radiative conditions.
 %The vibrationally excited transitions observed suggest that radiative
 %excitation is important in this environment.
-The molecular transitions we observe have  Einstein A values in the range
-$A\sim10^{-3}-10^{-2}$ s$^{-1}$, though the vibrationally excited states have
-transitions with rates $A\sim1$ s$^{-1}$.  The collision rates into the $v=0$
+The NaCl transitions we observe have  Einstein A values in the range
+$A\sim10^{-3}-10^{-2}$ s$^{-1}$, while the vibrationally excited states have
+infrared transitions with rates $A\sim1$ s$^{-1}$
+\cite{Barton2014a,Cabezas2016a}.  The collision rates into the $v=0$
 states are $C\sim10^{-11}$ cm$^3$ s$^{-1}$ (insensitive to temperature),
 while collision rates into $v>0$ states from $v=0$ states are lower,
 $C\sim10^{-13}-10^{-12}$ cm$^3$ s$^{-1}$ at $T=1000$ K, but only
-$C < 10^{-15}$  cm$^3$ s$^{-1}$ at $T=100$ K.  Extremely high
+$C < 10^{-15}$  cm$^3$ s$^{-1}$ at $T=100$ K \cite{Quintana-Lacaci2016a}.
+Extremely high
 gas temperatures and densities would be required to excite a significant
 population of the molecules into vibrational states.
 Furthermore, collisional excitation alone cannot explain the different
@@ -582,26 +586,26 @@ spectrum of AlO.
 %\emph{some} of the lines that were not detected because of severe confusion
 
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B3_spw0_robust0.5}.pdf}
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B3_spw1_robust0.5}.pdf}
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B3_spw2_robust0.5}.pdf}
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B3_spw3_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B3_spw0_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B3_spw1_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B3_spw2_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B3_spw3_robust0.5}.pdf}
 \caption{Stacked spectra  B3}
 \label{fig:spectrab3}
 \end{figure*}
 \begin{figure*}[!htp]
-    \includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B6_spw0_robust0.5}.pdf}
-    \includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B6_spw1_robust0.5}.pdf}
-    \includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B6_spw2_robust0.5}.pdf}
-    \includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B6_spw3_robust0.5}.pdf}
+    \includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B6_spw0_robust0.5}.pdf}
+    \includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B6_spw1_robust0.5}.pdf}
+    \includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B6_spw2_robust0.5}.pdf}
+    \includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B6_spw3_robust0.5}.pdf}
 \caption{Stacked spectra B6}
 \label{fig:spectrab6}
 \end{figure*}
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B7.lb_spw0_robust0.5}.pdf}
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B7.lb_spw1_robust0.5}.pdf}
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B7.lb_spw2_robust0.5}.pdf}
-\includegraphics[scale=1,width=5.5in]{{figures/lines_labeled_OrionSourceI_B7.lb_spw3_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B7.lb_spw0_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B7.lb_spw1_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B7.lb_spw2_robust0.5}.pdf}
+\includegraphics[scale=1,width=5.5in]{{figures/color_labels_OrionSourceI_B7.lb_spw3_robust0.5}.pdf}
 \caption{Stacked spectra B7}
 \label{fig:spectrab7}
 \end{figure*}
