comment out a comment

--- a/science.tex
+++ b/science.tex
@@ -660,8 +660,9 @@ frequencies reported by Barton \cite{Barton2014a}, and those given by
 the KCl lines appear to be systematically offset by $\sim$15-20 \kms in the
 Barton catalog.  
 The Barton data are also discrepant with the more recent
-\cite{Cabezas2016a} work that cataloged only NaCl lines
-{\bf [rlp: is the NaCl offset also 15-20 \kms?][ag:no, smaller]}. The offset is a
+\cite{Cabezas2016a} work that cataloged only NaCl lines.
+%{\bf [rlp: is the NaCl offset also 15-20 \kms?][ag:no, smaller]}
+The offset is a
 function of the vibrational and rotational energy states, indicating that it
 resulted from an incorrect rotational and/or distortion constant.  We
 corrected the KCl data
