--- a/science.tex
+++ b/science.tex
@@ -698,7 +698,7 @@ high, suggesting that they are blends with other species as denoted in
 Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}.
 
 
-\section{Spatial distribution of the salt emission}
+\section*{Spatial distribution of the salt emission}
 \label{sec:wherefrom}
 In \sourcei, the salt lines originate from the surface layers of the disk (the Band 7
 lines exhibit NaCl emission peaks at $\pm0.032\arcsec=13$ AU above the disk),
@@ -788,7 +788,7 @@ states and trace an intermediate region.
 
 
 
-\section{Excitation}
+\section*{Excitation}
 The detection of vibrationally excited transitions from v=0 to v=6 at similar
 brightness suggests that the vibrational excitation temperature $T_{ex,vib}$ of
 the molecules is high.  However, we see sharply decreasing populations in
@@ -1009,7 +1009,7 @@ low rotational and high vibrational temperature.
 
 
 
-\section{What is producing gas-phase salts?}
+\section*{What is producing gas-phase salts?}
 
 Sodium and potassium are rarely observed in the dense molecular interstellar
 medium.  They are usually assumed to be rapidly incorporated into dust grains
@@ -1102,7 +1102,7 @@ radiation can propagate to the part of the disk where the salts are observed,
 since small dust grains may pervade the system.
 
 
-\subsection{Other salts}
+\subsection*{Other salts}
 While NaCl and KCl are clearly detected here, there are also several transitions of
 AlCl and AlF in our observational bands that were not detected.
 \cite{Cernicharo1987a} detected these transitions at comparable brightness to NaCl
@@ -1116,7 +1116,7 @@ in our spectra supports this conclusion.
 
 
 
-\subsection{Isotopologue abundances}
+\subsection*{Isotopologue abundances}
 With several transitions of each of the observed isotopologues, we can in
 principle measure the relative abundance of the various isotopes.  However,
 because of the uncertainties in the excitation above, these measurements should
