restructure line list tables

--- a/lines_in_band3.tex
+++ b/lines_in_band3.tex
@@ -1,79 +1,79 @@
 \begin{table*}[htp]
 \centering
 \caption{All cataloged lines in Band 3}
-\begin{tabular}{cccccccc}
+\begin{tabular}{cccccccccc}
 \label{tab:all_detections_B3}
-Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
+Species & Alkali Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-$^{41}$K$^{35}$Cl & 8 & 12 & 11 & 3092.4 & 0.00041 & 85.80766 & n \\
-$^{23}$Na$^{35}$Cl & 8 & 7 & 6 & 4035.4 & 0.00031 & 85.87018 & n \\
-$^{39}$K$^{37}$Cl & 7 & 12 & 11 & 2713.3 & 0.00041 & 85.87379 & n \\
-$^{41}$K$^{37}$Cl & 3 & 12 & 11 & 1183.9 & 0.00039 & 85.93776 & n \\
-$^{23}$Na$^{37}$Cl & 5 & 7 & 6 & 2538.2 & 0.00030 & 85.98167 & d \\
-$^{41}$K$^{35}$Cl & 7 & 12 & 11 & 2720.7 & 0.00042 & 86.33986 & cn \\
-$^{39}$K$^{37}$Cl & 6 & 12 & 11 & 2339.4 & 0.00041 & 86.40364 & n \\
-$^{41}$K$^{37}$Cl & 2 & 12 & 11 & 801.6 & 0.00039 & 86.45668 & n \\
-$^{23}$Na$^{35}$Cl & 7 & 7 & 6 & 3550.1 & 0.00031 & 86.51754 & q \\
-$^{23}$Na$^{37}$Cl & 4 & 7 & 6 & 2043.6 & 0.00030 & 86.62109 & d \\
-$^{39}$K$^{35}$Cl & 10 & 12 & 11 & 3869.7 & 0.00044 & 86.68041 & n \\
-$^{41}$K$^{35}$Cl & 6 & 12 & 11 & 2345.7 & 0.00042 & 86.87413 & n \\
-$^{39}$K$^{37}$Cl & 5 & 12 & 11 & 1962.2 & 0.00042 & 86.93553 & n \\
-$^{41}$K$^{37}$Cl & 1 & 12 & 11 & 416.1 & 0.00040 & 86.97743 & q \\
-$^{23}$Na$^{35}$Cl & 6 & 7 & 6 & 3060.0 & 0.00032 & 87.16921 & d \\
-$^{39}$K$^{35}$Cl & 9 & 12 & 11 & 3500.3 & 0.00044 & 87.22792 & n \\
-$^{23}$Na$^{37}$Cl & 3 & 7 & 6 & 1544.3 & 0.00030 & 87.26464 & d \\
-$^{41}$K$^{35}$Cl & 5 & 12 & 11 & 1967.6 & 0.00042 & 87.41041 & n \\
-$^{39}$K$^{37}$Cl & 4 & 12 & 11 & 1581.9 & 0.00042 & 87.46938 & n \\
-$^{41}$K$^{37}$Cl & 0 & 12 & 11 & 27.3 & 0.00040 & 87.50010 & q \\
-$^{39}$K$^{35}$Cl & 8 & 12 & 11 & 3127.7 & 0.00044 & 87.77742 & n \\
-$^{23}$Na$^{35}$Cl & 5 & 7 & 6 & 2565.2 & 0.00032 & 87.82519 & d \\
-$^{23}$Na$^{37}$Cl & 2 & 7 & 6 & 1040.1 & 0.00031 & 87.91232 & d \\
-$^{41}$K$^{35}$Cl & 4 & 12 & 11 & 1586.3 & 0.00043 & 87.94866 & n \\
-$^{39}$K$^{37}$Cl & 3 & 12 & 11 & 1198.3 & 0.00042 & 88.00523 & d \\
-$^{39}$K$^{35}$Cl & 7 & 12 & 11 & 2751.8 & 0.00045 & 88.32895 & q \\
-$^{23}$Na$^{35}$Cl & 4 & 7 & 6 & 2065.5 & 0.00032 & 88.48549 & d \\
-$^{41}$K$^{35}$Cl & 3 & 12 & 11 & 1201.7 & 0.00043 & 88.48896 & cq \\
-$^{39}$K$^{37}$Cl & 2 & 12 & 11 & 811.5 & 0.00042 & 88.54307 & d \\
-$^{23}$Na$^{37}$Cl & 1 & 7 & 6 & 531.1 & 0.00031 & 88.56415 & d \\
-$^{39}$K$^{35}$Cl & 6 & 12 & 11 & 2372.8 & 0.00045 & 88.88253 & n \\
-$^{41}$K$^{35}$Cl & 2 & 12 & 11 & 813.8 & 0.00043 & 89.03129 & d \\
-$^{39}$K$^{37}$Cl & 1 & 12 & 11 & 421.4 & 0.00043 & 89.08292 & d \\
-$^{23}$Na$^{35}$Cl & 3 & 7 & 6 & 1561.0 & 0.00033 & 89.15011 & d \\
-$^{41}$K$^{37}$Cl & 10 & 13 & 12 & 3776.8 & 0.00048 & 89.21871 & n \\
-$^{23}$Na$^{37}$Cl & 0 & 7 & 6 & 17.1 & 0.00031 & 89.22011 & d \\
-$^{39}$K$^{35}$Cl & 4 & 13 & 12 & 1609.5 & 0.00058 & 97.49133 & d \\
-$^{23}$Na$^{37}$Cl & 6 & 8 & 7 & 3032.7 & 0.00045 & 97.53449 & q \\
-$^{41}$K$^{35}$Cl & 0 & 13 & 12 & 32.8 & 0.00056 & 97.62809 & d \\
-$^{41}$K$^{37}$Cl & 7 & 14 & 13 & 2690.7 & 0.00061 & 97.85364 & n \\
-$^{39}$K$^{35}$Cl & 3 & 13 & 12 & 1220.6 & 0.00059 & 98.09753 & d \\
-$^{23}$Na$^{35}$Cl & 8 & 8 & 7 & 4040.1 & 0.00047 & 98.13295 & q \\
-$^{23}$Na$^{37}$Cl & 5 & 8 & 7 & 2542.9 & 0.00045 & 98.26052 & q \\
-$^{39}$K$^{37}$Cl & 10 & 14 & 13 & 3825.5 & 0.00064 & 98.33904 & n \\
-$^{41}$K$^{37}$Cl & 6 & 14 & 13 & 2321.0 & 0.00061 & 98.44993 & n \\
-$^{39}$K$^{35}$Cl & 2 & 13 & 12 & 828.3 & 0.00059 & 98.70595 & d \\
-$^{41}$K$^{35}$Cl & 10 & 14 & 13 & 3835.7 & 0.00065 & 98.86759 & cn \\
-$^{23}$Na$^{35}$Cl & 7 & 8 & 7 & 3554.8 & 0.00047 & 98.87277 & q \\
-$^{39}$K$^{37}$Cl & 9 & 14 & 13 & 3461.0 & 0.00065 & 98.94969 & n \\
-$^{23}$Na$^{37}$Cl & 4 & 8 & 7 & 2048.4 & 0.00045 & 98.99127 & d \\
-$^{41}$K$^{37}$Cl & 5 & 14 & 13 & 1948.2 & 0.00062 & 99.04845 & n \\
-$^{39}$K$^{35}$Cl & 1 & 13 & 12 & 432.6 & 0.00059 & 99.31663 & d \\
-$^{41}$K$^{35}$Cl & 9 & 14 & 13 & 3470.3 & 0.00066 & 99.48329 & n \\
-$^{39}$K$^{37}$Cl & 8 & 14 & 13 & 3093.3 & 0.00065 & 99.56276 & n \\
-$^{23}$Na$^{35}$Cl & 6 & 8 & 7 & 3064.8 & 0.00048 & 99.61753 & d \\
-$^{41}$K$^{37}$Cl & 4 & 14 & 13 & 1572.3 & 0.00062 & 99.64924 & n \\
-$^{23}$Na$^{37}$Cl & 3 & 8 & 7 & 1549.1 & 0.00046 & 99.72675 & d \\
-$^{39}$K$^{35}$Cl & 0 & 13 & 12 & 33.6 & 0.00060 & 99.92952 & d \\
-$^{41}$K$^{35}$Cl & 8 & 14 & 13 & 3101.7 & 0.00066 & 100.10138 & n \\
-$^{39}$K$^{37}$Cl & 7 & 14 & 13 & 2722.6 & 0.00065 & 100.17822 & n \\
-$^{41}$K$^{37}$Cl & 3 & 14 & 13 & 1193.2 & 0.00063 & 100.25229 & n \\
-$^{23}$Na$^{35}$Cl & 5 & 8 & 7 & 2570.0 & 0.00048 & 100.36722 & d \\
-$^{23}$Na$^{37}$Cl & 2 & 8 & 7 & 1045.0 & 0.00046 & 100.46695 & d \\
-$^{41}$K$^{35}$Cl & 7 & 14 & 13 & 2730.0 & 0.00067 & 100.72190 & n \\
-$^{39}$K$^{37}$Cl & 6 & 14 & 13 & 2348.7 & 0.00066 & 100.79603 & q \\
-$^{41}$K$^{37}$Cl & 2 & 14 & 13 & 810.9 & 0.00063 & 100.85758 & n \\
-$^{39}$K$^{35}$Cl & 10 & 14 & 13 & 3879.0 & 0.00070 & 101.12088 & n \\
-$^{23}$Na$^{35}$Cl & 4 & 8 & 7 & 2070.4 & 0.00048 & 101.12183 & d \\
-$^{23}$Na$^{37}$Cl & 1 & 8 & 7 & 536.0 & 0.00047 & 101.21188 & d \\
+KCl & 41 & 35 & 8 & 12 & 11 & 3092.4 & 0.00041 & 85.80766 & n \\
+NaCl & 23 & 35 & 8 & 7 & 6 & 4035.4 & 0.00031 & 85.87018 & n \\
+KCl & 39 & 37 & 7 & 12 & 11 & 2713.3 & 0.00041 & 85.87379 & n \\
+KCl & 41 & 37 & 3 & 12 & 11 & 1183.9 & 0.00039 & 85.93776 & n \\
+NaCl & 23 & 37 & 5 & 7 & 6 & 2538.2 & 0.00030 & 85.98167 & d \\
+KCl & 41 & 35 & 7 & 12 & 11 & 2720.7 & 0.00042 & 86.33986 & cn \\
+KCl & 39 & 37 & 6 & 12 & 11 & 2339.4 & 0.00041 & 86.40364 & n \\
+KCl & 41 & 37 & 2 & 12 & 11 & 801.6 & 0.00039 & 86.45668 & n \\
+NaCl & 23 & 35 & 7 & 7 & 6 & 3550.1 & 0.00031 & 86.51754 & q \\
+NaCl & 23 & 37 & 4 & 7 & 6 & 2043.6 & 0.00030 & 86.62109 & d \\
+KCl & 39 & 35 & 10 & 12 & 11 & 3869.7 & 0.00044 & 86.68041 & n \\
+KCl & 41 & 35 & 6 & 12 & 11 & 2345.7 & 0.00042 & 86.87413 & n \\
+KCl & 39 & 37 & 5 & 12 & 11 & 1962.2 & 0.00042 & 86.93553 & n \\
+KCl & 41 & 37 & 1 & 12 & 11 & 416.1 & 0.00040 & 86.97743 & q \\
+NaCl & 23 & 35 & 6 & 7 & 6 & 3060.0 & 0.00032 & 87.16921 & d \\
+KCl & 39 & 35 & 9 & 12 & 11 & 3500.3 & 0.00044 & 87.22792 & n \\
+NaCl & 23 & 37 & 3 & 7 & 6 & 1544.3 & 0.00030 & 87.26464 & d \\
+KCl & 41 & 35 & 5 & 12 & 11 & 1967.6 & 0.00042 & 87.41041 & n \\
+KCl & 39 & 37 & 4 & 12 & 11 & 1581.9 & 0.00042 & 87.46938 & n \\
+KCl & 41 & 37 & 0 & 12 & 11 & 27.3 & 0.00040 & 87.50010 & q \\
+KCl & 39 & 35 & 8 & 12 & 11 & 3127.7 & 0.00044 & 87.77742 & n \\
+NaCl & 23 & 35 & 5 & 7 & 6 & 2565.2 & 0.00032 & 87.82519 & d \\
+NaCl & 23 & 37 & 2 & 7 & 6 & 1040.1 & 0.00031 & 87.91232 & d \\
+KCl & 41 & 35 & 4 & 12 & 11 & 1586.3 & 0.00043 & 87.94866 & n \\
+KCl & 39 & 37 & 3 & 12 & 11 & 1198.3 & 0.00042 & 88.00523 & d \\
+KCl & 39 & 35 & 7 & 12 & 11 & 2751.8 & 0.00045 & 88.32895 & q \\
+NaCl & 23 & 35 & 4 & 7 & 6 & 2065.5 & 0.00032 & 88.48549 & d \\
+KCl & 41 & 35 & 3 & 12 & 11 & 1201.7 & 0.00043 & 88.48896 & cq \\
+KCl & 39 & 37 & 2 & 12 & 11 & 811.5 & 0.00042 & 88.54307 & d \\
+NaCl & 23 & 37 & 1 & 7 & 6 & 531.1 & 0.00031 & 88.56415 & d \\
+KCl & 39 & 35 & 6 & 12 & 11 & 2372.8 & 0.00045 & 88.88253 & n \\
+KCl & 41 & 35 & 2 & 12 & 11 & 813.8 & 0.00043 & 89.03129 & d \\
+KCl & 39 & 37 & 1 & 12 & 11 & 421.4 & 0.00043 & 89.08292 & d \\
+NaCl & 23 & 35 & 3 & 7 & 6 & 1561.0 & 0.00033 & 89.15011 & d \\
+KCl & 41 & 37 & 10 & 13 & 12 & 3776.8 & 0.00048 & 89.21871 & n \\
+NaCl & 23 & 37 & 0 & 7 & 6 & 17.1 & 0.00031 & 89.22011 & d \\
+KCl & 39 & 35 & 4 & 13 & 12 & 1609.5 & 0.00058 & 97.49133 & d \\
+NaCl & 23 & 37 & 6 & 8 & 7 & 3032.7 & 0.00045 & 97.53449 & q \\
+KCl & 41 & 35 & 0 & 13 & 12 & 32.8 & 0.00056 & 97.62809 & d \\
+KCl & 41 & 37 & 7 & 14 & 13 & 2690.7 & 0.00061 & 97.85364 & n \\
+KCl & 39 & 35 & 3 & 13 & 12 & 1220.6 & 0.00059 & 98.09753 & d \\
+NaCl & 23 & 35 & 8 & 8 & 7 & 4040.1 & 0.00047 & 98.13295 & q \\
+NaCl & 23 & 37 & 5 & 8 & 7 & 2542.9 & 0.00045 & 98.26052 & q \\
+KCl & 39 & 37 & 10 & 14 & 13 & 3825.5 & 0.00064 & 98.33904 & n \\
+KCl & 41 & 37 & 6 & 14 & 13 & 2321.0 & 0.00061 & 98.44993 & n \\
+KCl & 39 & 35 & 2 & 13 & 12 & 828.3 & 0.00059 & 98.70595 & d \\
+KCl & 41 & 35 & 10 & 14 & 13 & 3835.7 & 0.00065 & 98.86759 & cn \\
+NaCl & 23 & 35 & 7 & 8 & 7 & 3554.8 & 0.00047 & 98.87277 & q \\
+KCl & 39 & 37 & 9 & 14 & 13 & 3461.0 & 0.00065 & 98.94969 & n \\
+NaCl & 23 & 37 & 4 & 8 & 7 & 2048.4 & 0.00045 & 98.99127 & d \\
+KCl & 41 & 37 & 5 & 14 & 13 & 1948.2 & 0.00062 & 99.04845 & n \\
+KCl & 39 & 35 & 1 & 13 & 12 & 432.6 & 0.00059 & 99.31663 & d \\
+KCl & 41 & 35 & 9 & 14 & 13 & 3470.3 & 0.00066 & 99.48329 & n \\
+KCl & 39 & 37 & 8 & 14 & 13 & 3093.3 & 0.00065 & 99.56276 & n \\
+NaCl & 23 & 35 & 6 & 8 & 7 & 3064.8 & 0.00048 & 99.61753 & d \\
+KCl & 41 & 37 & 4 & 14 & 13 & 1572.3 & 0.00062 & 99.64924 & n \\
+NaCl & 23 & 37 & 3 & 8 & 7 & 1549.1 & 0.00046 & 99.72675 & d \\
+KCl & 39 & 35 & 0 & 13 & 12 & 33.6 & 0.00060 & 99.92952 & d \\
+KCl & 41 & 35 & 8 & 14 & 13 & 3101.7 & 0.00066 & 100.10138 & n \\
+KCl & 39 & 37 & 7 & 14 & 13 & 2722.6 & 0.00065 & 100.17822 & n \\
+KCl & 41 & 37 & 3 & 14 & 13 & 1193.2 & 0.00063 & 100.25229 & n \\
+NaCl & 23 & 35 & 5 & 8 & 7 & 2570.0 & 0.00048 & 100.36722 & d \\
+NaCl & 23 & 37 & 2 & 8 & 7 & 1045.0 & 0.00046 & 100.46695 & d \\
+KCl & 41 & 35 & 7 & 14 & 13 & 2730.0 & 0.00067 & 100.72190 & n \\
+KCl & 39 & 37 & 6 & 14 & 13 & 2348.7 & 0.00066 & 100.79603 & q \\
+KCl & 41 & 37 & 2 & 14 & 13 & 810.9 & 0.00063 & 100.85758 & n \\
+KCl & 39 & 35 & 10 & 14 & 13 & 3879.0 & 0.00070 & 101.12088 & n \\
+NaCl & 23 & 35 & 4 & 8 & 7 & 2070.4 & 0.00048 & 101.12183 & d \\
+NaCl & 23 & 37 & 1 & 8 & 7 & 536.0 & 0.00047 & 101.21188 & d \\
 \hline
 \end{tabular}
 
