--- a/science.tex
+++ b/science.tex
@@ -611,13 +611,13 @@ spectrum of AlO.
 \end{figure*}
 
 
-In Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}, we list all
+In Tables \ref{tab:Na_detections_B3}-\ref{tab:K_detections_B7}, we list all
 of the salt lines in vibrational energy levels up to v=8 that lie within our
 observed bands and whether or not they were detected.  We employ the following
-flag scheme: `d' for detection, `n' for nondetection, `q' for questionable
+flag scheme: `D' for detection, `N' for nondetection, `Q' for questionable
 (e.g., low signal-to-noise, but possibly detected, or in regions where the
 noise is not Gaussian and may be affected by other lines).  We additionally
-include a flag `c' for `confused', which we add to the flag string if the line
+include a flag `C' for `confused', which we add to the flag string if the line
 is blended with another brighter line of a different species.  There are robust
 detections of about 60 lines, up to the v=6 vibrational level.
 
@@ -684,18 +684,21 @@ error was merely a transcription error of some sort.
 %scope of this \emph{Letter}, but is certainly warranted for follow-up efforts.
 
 
-\input{lines_in_band3.tex}
-\input{lines_in_band6.tex}
-\input{lines_in_band7.tex}
+\input{Na_lines_in_band3.tex}
+\input{Na_lines_in_band6.tex}
+\input{Na_lines_in_band7.tex}
+\input{K_lines_in_band3.tex}
+\input{K_lines_in_band6.tex}
+\input{K_lines_in_band7.tex}
 
 
 We have fit Gaussian line profiles to each of the transitions we flagged as
-`detected' in Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}.
+`detected' in Tables \ref{tab:Na_detections_B3}-\ref{tab:K_detections_B7}.
 The fits are reported in Tables
 \ref{tab:NaCl_salt_lines}-\ref{tab:41K37Cl_salt_lines}.  Some of these
 measurements (e.g., of the KCl v=5 45-44 line) are discrepantly
 high, suggesting that they are blends with other species as denoted in 
-Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}.
+Tables \ref{tab:Na_detections_B3}-\ref{tab:K_detections_B7}.
 
 
 \section*{Spatial distribution of the salt emission}
