--- a/lines_in_band6.tex
+++ b/lines_in_band6.tex
@@ -1,67 +1,67 @@
 \begin{table*}[htp]
 \centering
 \caption{All cataloged lines in Band 6}
-\begin{tabular}{cccccccc}
+\begin{tabular}{cccccccccc}
 \label{tab:all_detections_B6}
-Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
+Species & Alkali Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-$^{39}$K$^{37}$Cl & 7 & 30 & 29 & 2846.1 & 0.00654 & 214.41527 & -n \\
-$^{39}$K$^{35}$Cl & 6 & 29 & 28 & 2499.6 & 0.00648 & 214.54412 & -d \\
-$^{41}$K$^{37}$Cl & 3 & 30 & 29 & 1316.8 & 0.00626 & 214.57918 & -n \\
-$^{23}$Na$^{35}$Cl & 4 & 17 & 16 & 2141.3 & 0.00480 & 214.74232 & cn \\
-$^{41}$K$^{35}$Cl & 2 & 29 & 28 & 940.8 & 0.00622 & 214.90740 & cq \\
-$^{23}$Na$^{37}$Cl & 1 & 17 & 16 & 607.0 & 0.00460 & 214.93871 & -d \\
-$^{39}$K$^{35}$Cl & 0 & 28 & 27 & 149.7 & 0.00609 & 215.00828 & -d \\
-$^{39}$K$^{37}$Cl & 1 & 29 & 28 & 548.5 & 0.00616 & 215.03464 & cq \\
-$^{41}$K$^{37}$Cl & 8 & 31 & 30 & 3187.6 & 0.00668 & 215.09368 & cn \\
-$^{41}$K$^{35}$Cl & 7 & 30 & 29 & 2854.2 & 0.00665 & 215.57755 & cn \\
-$^{39}$K$^{37}$Cl & 6 & 30 & 29 & 2473.0 & 0.00659 & 215.73679 & -d \\
-$^{41}$K$^{37}$Cl & 2 & 30 & 29 & 935.3 & 0.00631 & 215.87559 & -n \\
-$^{39}$K$^{35}$Cl & 5 & 29 & 28 & 2118.0 & 0.00653 & 215.88373 & -d \\
-$^{23}$Na$^{37}$Cl & 8 & 18 & 17 & 4076.0 & 0.00520 & 216.05316 & -n \\
-$^{39}$K$^{37}$Cl & 5 & 30 & 29 & 2096.7 & 0.00664 & 217.06391 & -q \\
-$^{41}$K$^{37}$Cl & 1 & 30 & 29 & 550.6 & 0.00635 & 217.17723 & -q \\
-$^{39}$K$^{35}$Cl & 4 & 29 & 28 & 1733.2 & 0.00658 & 217.22891 & cd \\
-$^{39}$K$^{37}$Cl & 10 & 31 & 30 & 3957.2 & 0.00707 & 217.47744 & -n \\
-$^{41}$K$^{35}$Cl & 0 & 29 & 28 & 156.7 & 0.00631 & 217.54317 & -d \\
-$^{23}$Na$^{37}$Cl & 7 & 18 & 17 & 3596.2 & 0.00520 & 217.66504 & -q \\
-$^{41}$K$^{37}$Cl & 6 & 31 & 30 & 2452.9 & 0.00677 & 217.72366 & -n \\
-$^{39}$K$^{35}$Cl & 9 & 30 & 29 & 3635.2 & 0.00703 & 217.79704 & cn \\
-$^{23}$Na$^{35}$Cl & 2 & 17 & 16 & 1128.4 & 0.00490 & 217.98023 & -d \\
-$^{41}$K$^{35}$Cl & 5 & 30 & 29 & 2102.8 & 0.00675 & 218.24805 & -n \\
-$^{39}$K$^{37}$Cl & 4 & 30 & 29 & 1717.2 & 0.00668 & 218.39657 & cn \\
-$^{41}$K$^{37}$Cl & 0 & 30 & 29 & 162.6 & 0.00639 & 218.48414 & cn \\
-$^{39}$K$^{35}$Cl & 3 & 29 & 28 & 1345.1 & 0.00662 & 218.57971 & -d \\
-$^{41}$K$^{35}$Cl & 10 & 31 & 30 & 3968.1 & 0.00719 & 218.64471 & -n \\
-$^{39}$K$^{37}$Cl & 9 & 31 & 30 & 3593.5 & 0.00712 & 218.82568 & -q \\
-$^{23}$Na$^{37}$Cl & 0 & 18 & 17 & 104.6 & 0.00550 & 229.24605 & -d \\
-$^{39}$K$^{35}$Cl & 6 & 31 & 30 & 2521.2 & 0.00793 & 229.29217 & cd \\
-$^{41}$K$^{35}$Cl & 2 & 31 & 30 & 962.5 & 0.00761 & 229.68227 & cd \\
-$^{23}$Na$^{37}$Cl & 7 & 19 & 18 & 3607.2 & 0.00610 & 229.73281 & cn \\
-$^{39}$K$^{37}$Cl & 1 & 31 & 30 & 570.2 & 0.00753 & 229.81880 & -d \\
-$^{41}$K$^{35}$Cl & 7 & 32 & 31 & 2875.9 & 0.00808 & 229.90046 & -q \\
-$^{39}$K$^{37}$Cl & 6 & 32 & 31 & 2494.7 & 0.00800 & 230.07072 & -d \\
-$^{41}$K$^{37}$Cl & 2 & 32 & 31 & 957.1 & 0.00766 & 230.22070 & -q \\
-$^{41}$K$^{37}$Cl & 7 & 33 & 32 & 2843.6 & 0.00812 & 230.31852 & cn \\
-$^{39}$K$^{35}$Cl & 0 & 30 & 29 & 171.4 & 0.00749 & 230.32064 & -d \\
-$^{39}$K$^{35}$Cl & 5 & 31 & 30 & 2139.8 & 0.00798 & 230.72399 & -d \\
-$^{23}$Na$^{35}$Cl & 2 & 18 & 17 & 1139.5 & 0.00580 & 230.77917 & -d \\
-$^{39}$K$^{35}$Cl & 10 & 32 & 31 & 4025.6 & 0.00847 & 230.81309 & -n \\
-$^{39}$K$^{35}$Cl & 4 & 31 & 30 & 1755.1 & 0.00804 & 232.16185 & -d \\
-$^{39}$K$^{35}$Cl & 9 & 32 & 31 & 3657.1 & 0.00854 & 232.26613 & cn \\
-$^{41}$K$^{35}$Cl & 0 & 31 & 30 & 178.7 & 0.00771 & 232.49980 & cn \\
-$^{23}$Na$^{35}$Cl & 1 & 18 & 17 & 625.7 & 0.00580 & 232.50998 & -d \\
-$^{41}$K$^{35}$Cl & 10 & 33 & 32 & 3990.1 & 0.00868 & 232.69933 & cn \\
-$^{41}$K$^{35}$Cl & 5 & 32 & 31 & 2124.8 & 0.00819 & 232.74872 & -q \\
-$^{23}$Na$^{35}$Cl & 8 & 19 & 18 & 4130.7 & 0.00650 & 232.85904 & -q \\
-$^{39}$K$^{37}$Cl & 9 & 33 & 32 & 3615.5 & 0.00860 & 232.89230 & -n \\
-$^{39}$K$^{37}$Cl & 4 & 32 & 31 & 1739.2 & 0.00812 & 232.90755 & -d \\
-$^{41}$K$^{37}$Cl & 10 & 34 & 33 & 3942.7 & 0.00870 & 232.97243 & cn \\
-$^{41}$K$^{37}$Cl & 0 & 32 & 31 & 184.6 & 0.00777 & 233.00319 & cn \\
-$^{41}$K$^{37}$Cl & 5 & 33 & 32 & 2102.9 & 0.00823 & 233.12954 & cn \\
-$^{23}$Na$^{37}$Cl & 5 & 19 & 18 & 2633.6 & 0.00620 & 233.16920 & cd \\
-$^{39}$K$^{35}$Cl & 3 & 31 & 30 & 1367.1 & 0.00810 & 233.60570 & -d \\
-$^{39}$K$^{35}$Cl & 8 & 32 & 31 & 3285.5 & 0.00860 & 233.72540 & -n \\
+KCl & 39 & 37 & 7 & 30 & 29 & 2846.1 & 0.00654 & 214.41527 & n \\
+KCl & 39 & 35 & 6 & 29 & 28 & 2499.6 & 0.00648 & 214.54412 & d \\
+KCl & 41 & 37 & 3 & 30 & 29 & 1316.8 & 0.00626 & 214.57918 & n \\
+NaCl & 23 & 35 & 4 & 17 & 16 & 2141.3 & 0.00480 & 214.74232 & cn \\
+KCl & 41 & 35 & 2 & 29 & 28 & 940.8 & 0.00622 & 214.90740 & cq \\
+NaCl & 23 & 37 & 1 & 17 & 16 & 607.0 & 0.00460 & 214.93871 & d \\
+KCl & 39 & 35 & 0 & 28 & 27 & 149.7 & 0.00609 & 215.00828 & d \\
+KCl & 39 & 37 & 1 & 29 & 28 & 548.5 & 0.00616 & 215.03464 & cq \\
+KCl & 41 & 37 & 8 & 31 & 30 & 3187.6 & 0.00668 & 215.09368 & cn \\
+KCl & 41 & 35 & 7 & 30 & 29 & 2854.2 & 0.00665 & 215.57755 & cn \\
+KCl & 39 & 37 & 6 & 30 & 29 & 2473.0 & 0.00659 & 215.73679 & d \\
+KCl & 41 & 37 & 2 & 30 & 29 & 935.3 & 0.00631 & 215.87559 & n \\
+KCl & 39 & 35 & 5 & 29 & 28 & 2118.0 & 0.00653 & 215.88373 & d \\
+NaCl & 23 & 37 & 8 & 18 & 17 & 4076.0 & 0.00520 & 216.05316 & n \\
+KCl & 39 & 37 & 5 & 30 & 29 & 2096.7 & 0.00664 & 217.06391 & q \\
+KCl & 41 & 37 & 1 & 30 & 29 & 550.6 & 0.00635 & 217.17723 & q \\
+KCl & 39 & 35 & 4 & 29 & 28 & 1733.2 & 0.00658 & 217.22891 & cd \\
+KCl & 39 & 37 & 10 & 31 & 30 & 3957.2 & 0.00707 & 217.47744 & n \\
+KCl & 41 & 35 & 0 & 29 & 28 & 156.7 & 0.00631 & 217.54317 & d \\
+NaCl & 23 & 37 & 7 & 18 & 17 & 3596.2 & 0.00520 & 217.66504 & q \\
+KCl & 41 & 37 & 6 & 31 & 30 & 2452.9 & 0.00677 & 217.72366 & n \\
+KCl & 39 & 35 & 9 & 30 & 29 & 3635.2 & 0.00703 & 217.79704 & cn \\
+NaCl & 23 & 35 & 2 & 17 & 16 & 1128.4 & 0.00490 & 217.98023 & d \\
+KCl & 41 & 35 & 5 & 30 & 29 & 2102.8 & 0.00675 & 218.24805 & n \\
+KCl & 39 & 37 & 4 & 30 & 29 & 1717.2 & 0.00668 & 218.39657 & cn \\
+KCl & 41 & 37 & 0 & 30 & 29 & 162.6 & 0.00639 & 218.48414 & cn \\
+KCl & 39 & 35 & 3 & 29 & 28 & 1345.1 & 0.00662 & 218.57971 & d \\
+KCl & 41 & 35 & 10 & 31 & 30 & 3968.1 & 0.00719 & 218.64471 & n \\
+KCl & 39 & 37 & 9 & 31 & 30 & 3593.5 & 0.00712 & 218.82568 & q \\
+NaCl & 23 & 37 & 0 & 18 & 17 & 104.6 & 0.00550 & 229.24605 & d \\
+KCl & 39 & 35 & 6 & 31 & 30 & 2521.2 & 0.00793 & 229.29217 & cd \\
+KCl & 41 & 35 & 2 & 31 & 30 & 962.5 & 0.00761 & 229.68227 & cd \\
+NaCl & 23 & 37 & 7 & 19 & 18 & 3607.2 & 0.00610 & 229.73281 & cn \\
+KCl & 39 & 37 & 1 & 31 & 30 & 570.2 & 0.00753 & 229.81880 & d \\
+KCl & 41 & 35 & 7 & 32 & 31 & 2875.9 & 0.00808 & 229.90046 & q \\
+KCl & 39 & 37 & 6 & 32 & 31 & 2494.7 & 0.00800 & 230.07072 & d \\
+KCl & 41 & 37 & 2 & 32 & 31 & 957.1 & 0.00766 & 230.22070 & q \\
+KCl & 41 & 37 & 7 & 33 & 32 & 2843.6 & 0.00812 & 230.31852 & cn \\
+KCl & 39 & 35 & 0 & 30 & 29 & 171.4 & 0.00749 & 230.32064 & d \\
+KCl & 39 & 35 & 5 & 31 & 30 & 2139.8 & 0.00798 & 230.72399 & d \\
+NaCl & 23 & 35 & 2 & 18 & 17 & 1139.5 & 0.00580 & 230.77917 & d \\
+KCl & 39 & 35 & 10 & 32 & 31 & 4025.6 & 0.00847 & 230.81309 & n \\
+KCl & 39 & 35 & 4 & 31 & 30 & 1755.1 & 0.00804 & 232.16185 & d \\
+KCl & 39 & 35 & 9 & 32 & 31 & 3657.1 & 0.00854 & 232.26613 & cn \\
+KCl & 41 & 35 & 0 & 31 & 30 & 178.7 & 0.00771 & 232.49980 & cn \\
+NaCl & 23 & 35 & 1 & 18 & 17 & 625.7 & 0.00580 & 232.50998 & d \\
+KCl & 41 & 35 & 10 & 33 & 32 & 3990.1 & 0.00868 & 232.69933 & cn \\
+KCl & 41 & 35 & 5 & 32 & 31 & 2124.8 & 0.00819 & 232.74872 & q \\
+NaCl & 23 & 35 & 8 & 19 & 18 & 4130.7 & 0.00650 & 232.85904 & q \\
+KCl & 39 & 37 & 9 & 33 & 32 & 3615.5 & 0.00860 & 232.89230 & n \\
+KCl & 39 & 37 & 4 & 32 & 31 & 1739.2 & 0.00812 & 232.90755 & d \\
+KCl & 41 & 37 & 10 & 34 & 33 & 3942.7 & 0.00870 & 232.97243 & cn \\
+KCl & 41 & 37 & 0 & 32 & 31 & 184.6 & 0.00777 & 233.00319 & cn \\
+KCl & 41 & 37 & 5 & 33 & 32 & 2102.9 & 0.00823 & 233.12954 & cn \\
+NaCl & 23 & 37 & 5 & 19 & 18 & 2633.6 & 0.00620 & 233.16920 & cd \\
+KCl & 39 & 35 & 3 & 31 & 30 & 1367.1 & 0.00810 & 233.60570 & d \\
+KCl & 39 & 35 & 8 & 32 & 31 & 3285.5 & 0.00860 & 233.72540 & n \\
 \hline
 \end{tabular}
 
