--- a/lines_in_band7.tex
+++ b/lines_in_band7.tex
@@ -1,68 +1,68 @@
 \begin{table*}[htp]
 \centering
 \caption{All cataloged lines in Band 7}
-\begin{tabular}{cccccccc}
+\begin{tabular}{cccccccccc}
 \label{tab:all_detections_B7}
-Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
+Species & Alkali Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-$^{39}$K$^{37}$Cl & 5 & 46 & 45 & 2310.3 & 0.02398 & 332.14436 & cn \\
-$^{39}$K$^{35}$Cl & 6 & 45 & 44 & 2712.4 & 0.02429 & 332.22193 & cq \\
-$^{41}$K$^{37}$Cl & 8 & 48 & 47 & 3413.8 & 0.02483 & 332.29761 & -n \\
-$^{41}$K$^{37}$Cl & 1 & 46 & 45 & 764.4 & 0.02295 & 332.34847 & -n \\
-$^{41}$K$^{35}$Cl & 2 & 45 & 44 & 1154.0 & 0.02331 & 332.81369 & -n \\
-$^{41}$K$^{35}$Cl & 9 & 47 & 46 & 3818.5 & 0.02527 & 332.83163 & -n \\
-$^{23}$Na$^{35}$Cl & 2 & 26 & 25 & 1250.2 & 0.01800 & 333.00729 & -d \\
-$^{39}$K$^{37}$Cl & 1 & 45 & 44 & 761.8 & 0.02309 & 333.01833 & cn \\
-$^{23}$Na$^{35}$Cl & 7 & 27 & 26 & 3757.5 & 0.01900 & 333.03612 & cq \\
-$^{39}$K$^{35}$Cl & 2 & 44 & 43 & 1155.3 & 0.02336 & 333.06770 & -d \\
-$^{39}$K$^{37}$Cl & 8 & 47 & 46 & 3441.9 & 0.02504 & 333.10414 & -n \\
-$^{39}$K$^{35}$Cl & 9 & 46 & 45 & 3849.6 & 0.02539 & 333.23510 & -n \\
-$^{41}$K$^{37}$Cl & 4 & 47 & 46 & 1921.1 & 0.02398 & 333.43025 & -n \\
-$^{23}$Na$^{37}$Cl & 4 & 27 & 26 & 2251.3 & 0.01800 & 333.45906 & -d \\
-$^{41}$K$^{35}$Cl & 5 & 46 & 45 & 2317.6 & 0.02438 & 333.95245 & -n \\
-$^{39}$K$^{37}$Cl & 4 & 46 & 45 & 1932.1 & 0.02415 & 334.18696 & -n \\
-$^{39}$K$^{35}$Cl & 5 & 45 & 44 & 2332.2 & 0.02446 & 334.29930 & -d \\
-$^{41}$K$^{37}$Cl & 7 & 48 & 47 & 3049.3 & 0.02501 & 334.32791 & cd \\
-$^{41}$K$^{37}$Cl & 0 & 46 & 45 & 377.7 & 0.02311 & 334.35249 & cn \\
-$^{41}$K$^{35}$Cl & 1 & 45 & 44 & 764.9 & 0.02347 & 334.85439 & -d \\
-$^{41}$K$^{35}$Cl & 8 & 47 & 46 & 3452.1 & 0.02545 & 334.89960 & -n \\
-$^{41}$K$^{37}$Cl & 10 & 49 & 48 & 4149.6 & 0.02605 & 335.04657 & cn \\
-$^{39}$K$^{37}$Cl & 0 & 45 & 44 & 370.4 & 0.02325 & 335.05072 & -d \\
-$^{39}$K$^{35}$Cl & 1 & 44 & 43 & 761.7 & 0.02353 & 335.13396 & -d \\
-$^{39}$K$^{37}$Cl & 7 & 47 & 46 & 3073.3 & 0.02522 & 335.16416 & -q \\
-$^{39}$K$^{35}$Cl & 8 & 46 & 45 & 3479.1 & 0.02557 & 335.33093 & cq \\
-$^{41}$K$^{37}$Cl & 3 & 47 & 46 & 1544.2 & 0.02414 & 335.45237 & -n \\
-$^{23}$Na$^{35}$Cl & 1 & 26 & 25 & 737.2 & 0.01800 & 335.50656 & -d \\
-$^{23}$Na$^{35}$Cl & 6 & 27 & 26 & 3269.0 & 0.01900 & 335.54793 & cq \\
-$^{23}$Na$^{37}$Cl & 8 & 28 & 27 & 4211.3 & 0.02000 & 335.63074 & cn \\
-$^{41}$K$^{35}$Cl & 7 & 48 & 47 & 3099.1 & 0.02730 & 344.08981 & cn \\
-$^{41}$K$^{35}$Cl & 0 & 46 & 45 & 389.0 & 0.02525 & 344.33834 & cn \\
-$^{39}$K$^{37}$Cl & 6 & 48 & 47 & 2718.1 & 0.02705 & 344.35234 & cn \\
-$^{41}$K$^{37}$Cl & 2 & 48 & 47 & 1180.5 & 0.02589 & 344.60998 & cq \\
-$^{39}$K$^{35}$Cl & 7 & 47 & 46 & 3122.1 & 0.02747 & 344.71476 & -d \\
-$^{41}$K$^{35}$Cl & 10 & 49 & 48 & 4214.6 & 0.02843 & 344.73191 & -n \\
-$^{39}$K$^{35}$Cl & 0 & 45 & 44 & 381.2 & 0.02534 & 344.82061 & -d \\
-$^{39}$K$^{37}$Cl & 9 & 49 & 48 & 3840.1 & 0.02817 & 345.02524 & -n \\
-$^{23}$Na$^{35}$Cl & 7 & 28 & 27 & 3774.1 & 0.02100 & 345.31422 & cn \\
-$^{41}$K$^{35}$Cl & 3 & 47 & 46 & 1572.6 & 0.02637 & 345.37541 & cn \\
-$^{41}$K$^{37}$Cl & 5 & 49 & 48 & 2327.8 & 0.02698 & 345.40918 & cn \\
-$^{39}$K$^{35}$Cl & 10 & 48 & 47 & 4249.6 & 0.02864 & 345.42961 & cn \\
-$^{39}$K$^{37}$Cl & 2 & 47 & 46 & 1182.6 & 0.02612 & 345.59885 & cn \\
-$^{23}$Na$^{37}$Cl & 4 & 28 & 27 & 2267.9 & 0.02000 & 345.75480 & cn \\
-$^{23}$Na$^{35}$Cl & 2 & 27 & 26 & 1266.8 & 0.02000 & 345.76204 & cd \\
-$^{39}$K$^{35}$Cl & 3 & 46 & 45 & 1578.4 & 0.02650 & 345.94809 & cn \\
-$^{41}$K$^{35}$Cl & 6 & 48 & 47 & 2726.5 & 0.02750 & 346.22022 & -n \\
-$^{39}$K$^{37}$Cl & 5 & 48 & 47 & 2343.3 & 0.02724 & 346.47449 & -n \\
-$^{41}$K$^{37}$Cl & 1 & 48 & 47 & 797.3 & 0.02607 & 346.69248 & cn \\
-$^{39}$K$^{35}$Cl & 6 & 47 & 46 & 2745.3 & 0.02767 & 346.87489 & -d \\
-$^{41}$K$^{35}$Cl & 9 & 49 & 48 & 3851.5 & 0.02863 & 346.87825 & cn \\
-$^{39}$K$^{37}$Cl & 8 & 49 & 48 & 3474.8 & 0.02837 & 347.16340 & -n \\
-$^{41}$K$^{35}$Cl & 2 & 47 & 46 & 1187.0 & 0.02655 & 347.49773 & -q \\
-$^{41}$K$^{37}$Cl & 4 & 49 & 48 & 1954.1 & 0.02717 & 347.50839 & -n \\
-$^{23}$Na$^{37}$Cl & 8 & 29 & 28 & 4228.0 & 0.02200 & 347.55955 & -n \\
-$^{39}$K$^{35}$Cl & 9 & 48 & 47 & 3882.6 & 0.02884 & 347.60673 & -n \\
-$^{39}$K$^{37}$Cl & 1 & 47 & 46 & 794.8 & 0.02630 & 347.71265 & -d \\
-$^{23}$Na$^{35}$Cl & 6 & 28 & 27 & 3285.7 & 0.02100 & 347.91891 & nc \\
+KCl & 39 & 37 & 5 & 46 & 45 & 2310.3 & 0.02398 & 332.14436 & cn \\
+KCl & 39 & 35 & 6 & 45 & 44 & 2712.4 & 0.02429 & 332.22193 & cq \\
+KCl & 41 & 37 & 8 & 48 & 47 & 3413.8 & 0.02483 & 332.29761 & n \\
+KCl & 41 & 37 & 1 & 46 & 45 & 764.4 & 0.02295 & 332.34847 & n \\
+KCl & 41 & 35 & 2 & 45 & 44 & 1154.0 & 0.02331 & 332.81369 & n \\
+KCl & 41 & 35 & 9 & 47 & 46 & 3818.5 & 0.02527 & 332.83163 & n \\
+NaCl & 23 & 35 & 2 & 26 & 25 & 1250.2 & 0.01800 & 333.00729 & d \\
+KCl & 39 & 37 & 1 & 45 & 44 & 761.8 & 0.02309 & 333.01833 & cn \\
+NaCl & 23 & 35 & 7 & 27 & 26 & 3757.5 & 0.01900 & 333.03612 & cq \\
+KCl & 39 & 35 & 2 & 44 & 43 & 1155.3 & 0.02336 & 333.06770 & d \\
+KCl & 39 & 37 & 8 & 47 & 46 & 3441.9 & 0.02504 & 333.10414 & n \\
+KCl & 39 & 35 & 9 & 46 & 45 & 3849.6 & 0.02539 & 333.23510 & n \\
+KCl & 41 & 37 & 4 & 47 & 46 & 1921.1 & 0.02398 & 333.43025 & n \\
+NaCl & 23 & 37 & 4 & 27 & 26 & 2251.3 & 0.01800 & 333.45906 & d \\
+KCl & 41 & 35 & 5 & 46 & 45 & 2317.6 & 0.02438 & 333.95245 & n \\
+KCl & 39 & 37 & 4 & 46 & 45 & 1932.1 & 0.02415 & 334.18696 & n \\
+KCl & 39 & 35 & 5 & 45 & 44 & 2332.2 & 0.02446 & 334.29930 & d \\
+KCl & 41 & 37 & 7 & 48 & 47 & 3049.3 & 0.02501 & 334.32791 & cd \\
+KCl & 41 & 37 & 0 & 46 & 45 & 377.7 & 0.02311 & 334.35249 & cn \\
+KCl & 41 & 35 & 1 & 45 & 44 & 764.9 & 0.02347 & 334.85439 & d \\
+KCl & 41 & 35 & 8 & 47 & 46 & 3452.1 & 0.02545 & 334.89960 & n \\
+KCl & 41 & 37 & 10 & 49 & 48 & 4149.6 & 0.02605 & 335.04657 & cn \\
+KCl & 39 & 37 & 0 & 45 & 44 & 370.4 & 0.02325 & 335.05072 & d \\
+KCl & 39 & 35 & 1 & 44 & 43 & 761.7 & 0.02353 & 335.13396 & d \\
+KCl & 39 & 37 & 7 & 47 & 46 & 3073.3 & 0.02522 & 335.16416 & q \\
+KCl & 39 & 35 & 8 & 46 & 45 & 3479.1 & 0.02557 & 335.33093 & cq \\
+KCl & 41 & 37 & 3 & 47 & 46 & 1544.2 & 0.02414 & 335.45237 & n \\
+NaCl & 23 & 35 & 1 & 26 & 25 & 737.2 & 0.01800 & 335.50656 & d \\
+NaCl & 23 & 35 & 6 & 27 & 26 & 3269.0 & 0.01900 & 335.54793 & cq \\
+NaCl & 23 & 37 & 8 & 28 & 27 & 4211.3 & 0.02000 & 335.63074 & cn \\
+KCl & 41 & 35 & 7 & 48 & 47 & 3099.1 & 0.02730 & 344.08981 & cn \\
+KCl & 41 & 35 & 0 & 46 & 45 & 389.0 & 0.02525 & 344.33834 & cn \\
+KCl & 39 & 37 & 6 & 48 & 47 & 2718.1 & 0.02705 & 344.35234 & cn \\
+KCl & 41 & 37 & 2 & 48 & 47 & 1180.5 & 0.02589 & 344.60998 & cq \\
+KCl & 39 & 35 & 7 & 47 & 46 & 3122.1 & 0.02747 & 344.71476 & d \\
+KCl & 41 & 35 & 10 & 49 & 48 & 4214.6 & 0.02843 & 344.73191 & n \\
+KCl & 39 & 35 & 0 & 45 & 44 & 381.2 & 0.02534 & 344.82061 & d \\
+KCl & 39 & 37 & 9 & 49 & 48 & 3840.1 & 0.02817 & 345.02524 & n \\
+NaCl & 23 & 35 & 7 & 28 & 27 & 3774.1 & 0.02100 & 345.31422 & cn \\
+KCl & 41 & 35 & 3 & 47 & 46 & 1572.6 & 0.02637 & 345.37541 & cn \\
+KCl & 41 & 37 & 5 & 49 & 48 & 2327.8 & 0.02698 & 345.40918 & cn \\
+KCl & 39 & 35 & 10 & 48 & 47 & 4249.6 & 0.02864 & 345.42961 & cn \\
+KCl & 39 & 37 & 2 & 47 & 46 & 1182.6 & 0.02612 & 345.59885 & cn \\
+NaCl & 23 & 37 & 4 & 28 & 27 & 2267.9 & 0.02000 & 345.75480 & cn \\
+NaCl & 23 & 35 & 2 & 27 & 26 & 1266.8 & 0.02000 & 345.76204 & cd \\
+KCl & 39 & 35 & 3 & 46 & 45 & 1578.4 & 0.02650 & 345.94809 & cn \\
+KCl & 41 & 35 & 6 & 48 & 47 & 2726.5 & 0.02750 & 346.22022 & n \\
+KCl & 39 & 37 & 5 & 48 & 47 & 2343.3 & 0.02724 & 346.47449 & n \\
+KCl & 41 & 37 & 1 & 48 & 47 & 797.3 & 0.02607 & 346.69248 & cn \\
+KCl & 39 & 35 & 6 & 47 & 46 & 2745.3 & 0.02767 & 346.87489 & d \\
+KCl & 41 & 35 & 9 & 49 & 48 & 3851.5 & 0.02863 & 346.87825 & cn \\
+KCl & 39 & 37 & 8 & 49 & 48 & 3474.8 & 0.02837 & 347.16340 & n \\
+KCl & 41 & 35 & 2 & 47 & 46 & 1187.0 & 0.02655 & 347.49773 & q \\
+KCl & 41 & 37 & 4 & 49 & 48 & 1954.1 & 0.02717 & 347.50839 & n \\
+NaCl & 23 & 37 & 8 & 29 & 28 & 4228.0 & 0.02200 & 347.55955 & n \\
+KCl & 39 & 35 & 9 & 48 & 47 & 3882.6 & 0.02884 & 347.60673 & n \\
+KCl & 39 & 37 & 1 & 47 & 46 & 794.8 & 0.02630 & 347.71265 & d \\
+NaCl & 23 & 35 & 6 & 28 & 27 & 3285.7 & 0.02100 & 347.91891 & nc \\
 \hline
 \end{tabular}
 
