--- a/lines_in_band3.tex
+++ b/lines_in_band3.tex
@@ -1,5 +1,6 @@
 \begin{table*}[htp]
 \centering
+% rlp: I tried this to make entire table show up, but even this is not enough: \tabletypesize\scriptsize
 \caption{All cataloged lines in Band 3}
 \begin{tabular}{cccccccc}
 \label{tab:all_detections_B3}
